welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: not found: value b
for (k <- 0 to b-2) {
               ^