welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
var taille = getMondeHauteur()



var k = 0
var T = new Array[Color](taille);

for (i <- 0 to T.length-1) {
  avance()
  T(i) =  getCouleurSol()
}



for (k <- 0 to b-2) {

val decalage = litMessage().toInt
gauche()
avance()
droite()
avance()
for ( i <- 0 to T.length-1 ) {
avance()
baisseBrosse()
setCouleurBrosse(T(i))

}
}

}
